validation for config fields and refactoring

--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,17 @@
 [GLOBAL]
 FILENAME = Poland_interp_v.dat
 
-[TIME_SERIES]
-GRAPH = 1
+[INITIAL_SIGNAL]
+PLOT_SHOW = 1
 
 [CUSTOM]
-PLOT = 1
-OUTPUT = 1
+PLOT_SHOW = 0
+OUTPUT_SAVE = 1
 
 [WELCH]
-PLOT = 1
-OUTPUT = 1
+PLOT_SHOW = 1
+OUTPUT_SAVE = 1
 
 [PERIODOGRAM]
-PLOT = 1
-OUTPUT = 1
+PLOT_SHOW = 0
+OUTPUT_SAVE = 1
