delete unnecessary logic from custom method

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [GLOBAL]
-FILENAME = Poland_interp_v.dat
+FILENAME = Turkey_interp_v.dat
 
 [INITIAL_SIGNAL]
 PLOT_SHOW = 1
 
 [CUSTOM]
-PLOT_SHOW = 0
+PLOT_SHOW = 1
 OUTPUT_SAVE = 1
 
 [WELCH]
@@ -13,5 +13,5 @@ PLOT_SHOW = 1
 OUTPUT_SAVE = 1
 
 [PERIODOGRAM]
-PLOT_SHOW = 0
+PLOT_SHOW = 1
 OUTPUT_SAVE = 1
