add window in config file

--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,9 @@ OUTPUT_SAVE = 1
 [WELCH]
 PLOT_SHOW = 1
 OUTPUT_SAVE = 1
+WINDOW = hann
 
 [PERIODOGRAM]
 PLOT_SHOW = 0
-OUTPUT_SAVE = 0
+OUTPUT_SAVE = 1
+WINDOW = hann
