save in directory and work with 1 column

--- a/config.ini
+++ b/config.ini
@@ -1,19 +1,19 @@
 [GLOBAL]
-FILENAME = Poland_interp_v.dat
+PATH = data/S169W.txt
 
 [INITIAL_SIGNAL]
-PLOT_SHOW = 0
+PLOT_SHOW = 1
 
 [CUSTOM]
-PLOT_SHOW = 0
+PLOT_SHOW = 1
 OUTPUT_SAVE = 1
 
 [WELCH]
 PLOT_SHOW = 1
-OUTPUT_SAVE = 1
+OUTPUT_SAVE = 0
 WINDOW = hann
 
 [PERIODOGRAM]
-PLOT_SHOW = 0
-OUTPUT_SAVE = 1
-WINDOW = hann
+PLOT_SHOW = 1
+OUTPUT_SAVE = 0
+WINDOW = hamming
