remove csv.reader

--- a/config.ini
+++ b/config.ini
@@ -1,19 +1,19 @@
 [GLOBAL]
-PATH = data/S169W.txt
+PATH = data/Poland_interp_v.dat
 
 [INITIAL_SIGNAL]
 PLOT_SHOW = 1
 
 [CUSTOM]
-PLOT_SHOW = 1
-OUTPUT_SAVE = 1
+PLOT_SHOW = 0
+OUTPUT_SAVE = 0
 
 [WELCH]
 PLOT_SHOW = 1
-OUTPUT_SAVE = 0
-WINDOW = hann
+OUTPUT_SAVE = 1
+WINDOW = triang
 
 [PERIODOGRAM]
-PLOT_SHOW = 1
+PLOT_SHOW = 0
 OUTPUT_SAVE = 0
 WINDOW = hamming
