update excel chart

--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,15 @@
 [GLOBAL]
-PATH = data/S169W.txt
+PATH = data/Poland_interp_v.dat
 
 [INITIAL_SIGNAL]
-PLOT_SHOW = 1
+PLOT_SHOW = 0
 
 [CUSTOM]
 PLOT_SHOW = 0
 OUTPUT_SAVE = 1
 
 [WELCH]
-PLOT_SHOW = 1
+PLOT_SHOW = 0
 OUTPUT_SAVE = 1
 WINDOW = triang
 
