start refactoring and add prox_tv filter

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [GLOBAL]
-PATH = data/S169W_500_1_output.dat
+PATH = data/Poland_interp_v.dat
 
 [INITIAL_SIGNAL]
 PLOT_SHOW = 0
@@ -7,5 +7,7 @@ PLOT_SHOW = 0
 [WELCH]
 PLOT_SHOW = 0
 OUTPUT_SAVE = 1
+FILTER = 1
+FILTERED_FREQUENCY = 500
 WINDOW = hann
 
