refactoring (non-working)

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,5 @@
-[GLOBAL]
+[SECTION1]
 PATH = data/Poland_interp_v.dat
-
-[INITIAL_SIGNAL]
-PLOT_SHOW = 0
-
-[WELCH]
-PLOT_SHOW = 0
-OUTPUT_SAVE = 1
-FILTER = 1
+FILTERING = 1
 FILTERED_FREQUENCY = 500
 WINDOW = hann
-
