--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,11 @@
 [SECTION1]
 PATH = data/Poland_interp_v.dat
+FILTERING = 0
+WINDOW = triang
+
+[SECTION2]
+PATH = data/Poland_interp_v.dat
 FILTERING = 1
 FILTERED_FREQUENCY = 500
-WINDOW = hann
+WINDOW = hamming
+
