fix for values-only csv

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ FILTERING = 0
 WINDOW = triang
 
 [SECTION2]
-PATH = data/Poland_interp_v.dat
+PATH = data/S001R01_1_output.dat
 FILTERING = 1
 FILTERED_FREQUENCY = 500
 WINDOW = hamming
