moved import ptv to if filtering

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,47 @@
 [SECTION1]
-PATH = data/Poland_interp_v.dat
-FILTERING = 0
-WINDOW = triang
-
-[SECTION2]
-PATH = data/S001R01_1_output.dat
+PATH = data/EEG/423w_1_output.dat
 FILTERING = 1
 FILTERED_FREQUENCY = 500
-WINDOW = hamming
+WINDOW = hann
+
+[SECTION2]
+PATH = data/EEG/423w_4_output.dat
+FILTERING = 1
+FILTERED_FREQUENCY = 500
+WINDOW = hann
+
+[SECTION3]
+PATH = data/EEG/s425w1_1_output.dat
+FILTERING = 1
+FILTERED_FREQUENCY = 500
+WINDOW = hann
+
+[SECTION4]
+PATH = data/EEG/s425w1_4_output.dat
+FILTERING = 1
+FILTERED_FREQUENCY = 500
+WINDOW = hann
+
+[SECTION5]
+PATH = data/EEG/S169W_1_output.dat
+FILTERING = 1
+FILTERED_FREQUENCY = 500
+WINDOW = hann
+
+[SECTION6]
+PATH = data/EEG/S169W_4_output.dat
+FILTERING = 1
+FILTERED_FREQUENCY = 500
+WINDOW = hann
+
+[SECTION7]
+PATH = data/EEG/S196W1_1_output.dat
+FILTERING = 1
+FILTERED_FREQUENCY = 500
+WINDOW = hann
+
+[SECTION8]
+PATH = data/EEG/S196W1_4_output.dat
+FILTERING = 1
+FILTERED_FREQUENCY = 500
+WINDOW = hann
